--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,26 @@ body {
 }
 
 /* Add media query for smaller screens if needed */
+
+#alternativeBackground{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: opacity 1s ease-in-out;
+    opacity: 1;
+}
+#backgroundImage {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: opacity 1s ease-in-out;
+    opacity: 0;
+}
